# Hashed-Genealogy-Graph

./: .gitignore  CMakeLists.txt  HashedGenealogyGraph.py  README.md  app.cpp  build.sh  c.cpp  genealogy_save.json  genealogy_save.txt  hashed_genealogy_graph.pyx  main  main.cpp  pybind_main.cpp  setup.py  test.ipynb  test.py
BALKAN_FamilyTreeJS_FREE_1.09.13/: familytree.d.ts
HashedGenealogyGraph/: HashedGenealogyGraph.cpp  HashedGenealogyGraph.h
SHA256/: SHA256.cpp  SHA256.h
include/: FileManager.h  GenealogyGraph.h  HashedGenealogyGraph.h  PyCppInterface.h  Trie.h  sha256.h
sha256/: sha256.cpp  sha256.h
src/: FileManager.cpp  GenealogyGraph.cpp  HashedGenealogyGraph.cpp  PyCppInterface.cpp  Trie.cpp  sha256.cpp
static/: genealogy_save.json
templates/: home.html
